--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "nodemon",
+    "build": "rm -rf ./build && tsc",
+    "start": "npm run build && node build/index.js",
     "test": "jest"
   },
   "repository": {
@@ -17,6 +20,12 @@
   },
   "homepage": "https://github.com/LauroRigon/node-app#readme",
   "devDependencies": {
-    "jest": "^28.0.3"
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.30",
+    "jest": "^27.0.0",
+    "nodemon": "^2.0.16",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
