--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "nodemon",
     "build": "rm -rf ./build && tsc",
     "start": "npm run build && node build/index.js",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
